[[whats-new-part]]
= What's New?

[[spring-integration-intro-new]]
For those who are already familiar with Spring Integration, this chapter provides a brief overview of the new features of version 6.2.

If you are interested in the changes and features that were introduced in earlier versions, see the <<./history.adoc#history,Change History>>.

[[whats-new]]

== What's New in Spring Integration 6.2?

If you are interested in more details, see the Issue Tracker tickets that were resolved as part of the 6.2 development process.

In general the project has been moved to the latest dependency versions.

[[x6.2-new-components]]
=== New Components

[[x6.2-general]]
=== General Changes

- The XML configuration for `<poller>` and `@Poller` annotation now support ISO 8601 duration format for `fixed-delay`, `fixed-rate` and `initial-delay` options.
See <<./endpoint.adoc#endpoint-pollingconsumer, Polling Consumer>> for more information.