@@ -66,6 +66,12 @@ The following table summarizes the various endpoints with quick links to the app
 | N
 | <<./cassandra.adoc#cassandra-outbound,Outbound Gateway>>
 
+| *Debezium*
+| <<./debezium.adoc#debezium-inbound, Debezium Inbound Channel Adapter>>
+| N
+| N
+| N
+
 | *Events*
 | <<./event.adoc#appevent-inbound,Receiving Spring Application Events>>
 | <<./event.adoc#appevent-outbound,Sending Spring Application Events>>
